--- a/client/package.json
+++ b/client/package.json
@@ -19,12 +19,14 @@
     "classnames": "^2.3.2",
     "dotenv": "^16.4.7",
     "icons": "^1.0.0",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-player": "^2.12.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.17.2",
     "swiper": "^9.0.5",
     "web-vitals": "^2.1.4"
   },
